1.3.9 unreleased

- Don't try to restart memmon unless it's actually in use.
  [smcmahon]

- When copying buildout extra directory, preserve file modes.
  [smcmahon]

- Fix incorrect indentation with plone_zope_conf_additional.
  [fulv]

- Disable plone_client_tcpcheck for py3.
  See discussion in https://github.com/plone/ansible-playbook/issues/138
  [fulv]

1.3.8 2020-02-15

- Make 5.2.1 the default.
  [smcmahon]

- Bump PloneHotfix20200121 to v1.1.
  [stevepiercy]

- Add PloneHotfix20200121. Normalize and sort hotfixes across eggs and
  versions sections.
  [stevepiercy]

- Make it a little easier to use Vagrant to test against playbooks other than test.yml by
  1) having the Vagrantfile not automatically provision with ansible; and
  2) adding a couple of shell scripts to test against the default or all boxes.
  Both shell scripts accept a test playbook filename; if none is given, runs against test.yml.
  Note that Travis CI only tests ./test.yml.
  [smcmahon]

- Fix CI by updating .travis to use bionic and --become rather than --sudo.
  [smcmahon]

- Earlier buildout fix in this release introduced a typo that broke buildout operation under some conditions. Fixed.
  [smcmahon]

- If plone_python_version == '3', then append an argument to install
  superlance that specifies the path to pip3.
  [stevepiercy]

- Bump superlance to v1.0 to support Python 3
  [stevepiercy]

- Buildout would not be re-run even when the buildout template had changed.  Fixed.
  [fulv]

1.3.7 2019-07-21

- Make it possible to use Python 3 with Plone 5.2.
  Allow plone_python_version to be set generally or per plone server.
  Expand test.yml to include both 2.7 and 3 builds of Plone 5.2.
  [smcmahon]

1.3.6 2019-03-25

- Add Plone 5.2 to test suite.
  It's working with Python 2.7 for RC2-pending.
  [smcmahon]

- Do not specify the products folder in buildout config for Plone 5.2+.
  It's no longer supported.
  [smcmahon]
